--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
     }
     .no-hover {
       position: relative;
-      top: 0;
-      left: 0;
-    }
-    .no-hover:hover {
-      position: absolute;
-      top: 10px;
-      left: 10px;
+      display: inline-block;
     }
     #hasina-image {
       display: none;
@@ -45,17 +39,23 @@
   </div>
 
   <div>
-    <img id="hasina-image" src="https://i.imgur.com/meFnCTU.jpeg" alt="Sheikh Hasina Laughing" width="300">
+    <img id="hasina-image" src="https://i.imgur.com/YOUR_IMAGE_ID.jpg" alt="Sheikh Hasina Laughing" width="300">
   </div>
 
   <script>
+    // When "Awami League" button is clicked, show the image
     document.getElementById("yes-btn").addEventListener("click", function() {
       document.getElementById("hasina-image").style.display = "block";
     });
 
+    // When hovering over the "BNP" button, move it within the visible screen area
     document.getElementById("no-btn").addEventListener("mouseover", function() {
-      this.style.left = Math.random() * (window.innerWidth - this.offsetWidth) + "px";
-      this.style.top = Math.random() * (window.innerHeight - this.offsetHeight) + "px";
+      const btn = this;
+      const newLeft = Math.random() * (window.innerWidth - btn.offsetWidth);
+      const newTop = Math.random() * (window.innerHeight - btn.offsetHeight);
+      btn.style.position = "absolute";
+      btn.style.left = newLeft + "px";
+      btn.style.top = newTop + "px";
     });
   </script>
 
