--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div>
-    <img id="hasina-image" src="https://i.imgur.com/YOUR_IMAGE_ID.jpg" alt="Sheikh Hasina Laughing" width="300">
+    <img id="hasina-image" src="https://i.imgur.com/meFnCTU.jpeg" alt="Sheikh Hasina Laughing" width="300">
   </div>
 
   <script>
